--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 html {
     position: relative;
     min-height: 100%;
@@ -15,7 +14,7 @@ body::before {
     height: 5px;
     background: linear-gradient(to right, rgb(252, 252, 33), rgb(255, 136, 0),red);
     position: absolute;
-    top: 250px;
+    /* top: 350px; */
     z-index: 1;
 }
 
@@ -31,14 +30,10 @@ body::after {
 }
 
 .jumbotron{
-    /* background-image: url("../images/jumbotron.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover; */
     background-color: #101011;
     text-align: center;
     color: #fff;
-    height:250px;
+    /* height:250px; */
   }
 
 .jumbotron h1{
@@ -50,10 +45,10 @@ letter-spacing: 20px;
 .btnClass{
     margin:10px;
     height:50px;
-    width:200px;
+    width:100px;
     color: #fff;
-    background: linear-gradient(to right, rgb(252, 252, 33), rgb(255, 136, 0),red);
-    border: 1px solid transparent;
+    /* background: linear-gradient(to right, rgb(252, 252, 33), rgb(255, 136, 0),red); */
+    border: 2px solid transparent;
     line-height: 1.5;
     border-radius: 5px;
 }
@@ -63,7 +58,6 @@ letter-spacing: 20px;
     height:50px;
     width:180px; 
     position: relative;
-
 }
 
 img { 
@@ -80,7 +74,9 @@ img:hover {
     float:left;
     margin:5px;
 }
-
+#animal-view{
+    min-height: 600px;;
+}
 .footer {
     position: absolute;
     bottom: 0;
